crates/ditto-checker/tests/golden/type-errors/no_visible_constructors.ditto
module Test exports (..)

import (test-stuff) Data.Stuff (Abstract(..))
